Initialize a mini-bio template

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <a href=https://github.com/julia-barbelane><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/juliabarbelane><i class="fa fa-twitter"></i></a>
                 <a href=http://www.juliabarbelane.com><i class="fa fa-sitemap"></i></a>
-            </span>            
+            </span>
         </article>
         <article>
             <h3>Thomas Wolff<span class=baseline>La tête dans la tempête</span></h3>
@@ -285,6 +285,145 @@
                 <a href=https://twitter.com/ftregan><i class="fa fa-twitter"></i></a>
             </span>
         </article>
+
+
+        <article>
+            <h3>Vincent Tim<span class=baseline>Stagiaire en cabinet comptable</span></h3>
+            <img src=img/humains/robot.png>
+            <p>Après quelques années d'une carrière aristique lucrative mais
+            vide de sens, j'ai tout abandonné pour me réorienter vers une
+            formation accélérée d'expert-comptable.</p>
+            <p>Paperasse ennuyeuse pour les uns, défi toujours renouvelé pour
+            moi ; en exerçant ma passion, je souhaite pouvoir décharger les
+            chef·fe·s d'entreprise de leurs obligations administratives pour
+            leur permettre de se concentrer sur leur vrai métier : rendre à la
+            France sa grandeur économique.</p>
+            <p>Pour l'instant salarié, mon projet à moyen terme est de monter
+            mon propre cabinet.</p>
+            <p>Mon goût pour les chiffres et les procédures m'ammène
+            naturellement à participer aux formations sur Lean et l'Agilité.</p>
+
+            <h4>Formations</h4>
+            <ul class="formations">
+                <li><a href="#">Running Lean</a></li>
+                <li><a href="#">Product Owner</a></li>
+            </ul>
+
+            <span class=links>
+                <a href=https://github.com/fabientregan><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/ftregan><i class="fa fa-twitter"></i></a>
+            </span>
+        </article>
+
+        <article>
+            <h3>Sarah Gondin<span class=baseline>Enseignante dans le secondaire,
+                environnementaliste militante</span></h3>
+            <img src=img/humains/robot.png>
+            <p>Enseignante en histoire-géographie à plein-temps dans un lycée de
+            banlieue parisienne, j'ai érigé la survie en milieu hostile au rang
+            d'art de vivre.</p>
+            <p>Fascinée par la psychologie expérimentale, j'utilise
+            l'environnement de mes salles de classe pour tester et peaufiner mes
+            techniques de manipulation psychologique.</p>
+            <p>Passée maîtresse dans l'art de la maltraitance managériale, je
+            propose des ateliers de survie dans le milieu de l'open-space.</p>
+
+            <h4>Formations</h4>
+            <ul class="formations">
+                <li><a href="#">Gestion de projets</a></li>
+                <li><a href="#">Management non-violent</a></li>
+            </ul>
+
+            <span class=links>
+                <a href=https://github.com/fabientregan><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/ftregan><i class="fa fa-twitter"></i></a>
+            </span>
+        </article>
+
+        <article>
+            <h3>Pâcome Ode<span class=baseline>Jongleur, acrobate,
+                    contorsionniste</span></h3>
+            <img src=img/humains/robot.png>
+
+            <p>À la suite à un traumatisme, j'ai décidé de devenir
+            contorsionniste pour donner des cauchemars aux enfants.</p>
+
+            <p>Depuis 15 ans, je parcours les routes avec ma compagnie de cirque
+            et me produits régulièrement dans les grandes villes de France et
+            d'Europe.</p>
+
+            <p>J'aime revenir en Corse, ma belle région natale, dont les
+            somptueux paysages sont source d'inspiration et parce que l'âge
+            moyen de la population y est si élevé.</p>
+
+            <p>Donner des formations au sein de la Contrée est un moyen pour
+            moi de communiquer ma passion dans un cadre convivial, ouvert et en
+            compagnie de gens dynamiques et motivés.</p>
+
+            <h4>Formations</h4>
+            <ul class="formations">
+                <li><a href="#">Jeux cocréatifs</a></li>
+                <li><a href="#">Forum ouvert</a></li>
+                <li><a href="#">Positionnement CSS</a></li>
+            </ul>
+
+            <span class=links>
+                <a href=https://github.com/fabientregan><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/ftregan><i class="fa fa-twitter"></i></a>
+            </span>
+        </article>
+
+        <article>
+            <h3>Prénom Nom<span class=baseline>Qualité(s)</span></h3>
+            <img src=img/humains/robot.png>
+
+            <p><em>Squelette de mini-bio très imparfait, à utiliser en cas de
+                grosse panne d'inspiration.</em></p>
+
+            <p><em>Idée : parler à la première personne.</em></p>
+
+            <p><em>Idée : suivre un fil.</em></p>
+
+            <p><em>1 court paragraphe : parcours et métier. Ce que je fais.</em>
+            Après X années d'études en X / X années de carrière dans Y / une
+            première réorientation, j'ai rejoint l'entreprise Y / me suis
+            lancé·e à mon compte / ai monté mon entreprise. Aujourd'hui, je vis
+            en développant des sites Web / accompagnant des entreprises /
+            profitant des allocations / …</p>
+
+            <p><em>1 paragraphe : pourquoi je fais ce que je fais. Donner du
+                contexte.</em> J'ai choisi de … pour pouvoir …. Je participe aux
+            … pour nourrir ma quête de …. J'utilise la techno … par goût pour …
+            Je crois que… car…</p>
+
+            <p><em>1 paragraphe : ce que je veux, plans à moyen terme.</em>
+            J'aspire à donner / trouver / vivre / échanger / rencontrer… Mon
+            rêve serait de… J'ai pour projet de… Je ne connaîtrai pas le repos
+            tant que…</p>
+
+            <p><em>1 paragraphe : donner quelques détails persos.</em>Sur mon
+            temps libre, je… Quand je ne travaille pas, on me trouve… J'aime
+            aussi beaucoup… Dans un univers parallèle, j'aurais voulu être…</p>
+
+            <p><em>1 paragraphe : évoquer les formations auxquelles vous
+            participez en donnant du contexte.</em> J'interviens sur les
+            ateliers … et … C'est tout naturellement que je participerai aux
+            formations … et … En rejoignant la Contrée, j'ai pu trouver des
+            ressources pour partager ma passion pour … et …</p>
+
+            <h4>Formations</h4>
+            <ul class="formations">
+                <li><a href="#">Jeux cocréatifs</a></li>
+                <li><a href="#">Forum ouvert</a></li>
+                <li><a href="#">Positionnement CSS</a></li>
+            </ul>
+
+            <span class=links>
+                <a href=https://github.com/fabientregan><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/ftregan><i class="fa fa-twitter"></i></a>
+            </span>
+        </article>
+
     </div>
 </section>
 <section id=trainings>
@@ -415,7 +554,7 @@
             <!-- <a href=#>En savoir plus</a> -->
         </article>
     </div>
-</section> 
+</section>
 <footer>
     <p>Bordeaux - Toulouse - Paris - Lille - Montpellier - Marseille - Lyon - Nantes - Strasbourg</p>
 </footer>
