--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel=stylesheet href=vendor/font-awesome-4.7.0/css/font-awesome.min.css>
+<link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass.css">
 <link rel=stylesheet href=grillade.css>
 <link rel=stylesheet href=style.css>
 <meta charset=utf-8>
@@ -241,7 +242,7 @@
                 <a href=https://github.com/julia-barbelane><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/juliabarbelane><i class="fa fa-twitter"></i></a>
                 <a href=http://www.juliabarbelane.com><i class="fa fa-sitemap"></i></a>
-            </span>            
+            </span>
         </article>
         <article>
             <h3>Thomas Wolff<span class=baseline>La tête dans la tempête</span></h3>
@@ -415,7 +416,7 @@
             <!-- <a href=#>En savoir plus</a> -->
         </article>
     </div>
-</section> 
+</section>
 <footer>
     <p>Bordeaux - Toulouse - Paris - Lille - Montpellier - Marseille - Lyon - Nantes - Strasbourg</p>
 </footer>
