--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel=stylesheet href=vendor/font-awesome-4.7.0/css/font-awesome.min.css>
-<link rel="stylesheet" href="http://overpass-30e2.kxcdn.com/overpass.css">
+<link rel="stylesheet" href="https://overpass-30e2.kxcdn.com/overpass.css">
 <link rel=stylesheet href=grillade.css>
 <link rel=stylesheet href=style.css>
 <meta charset=utf-8>
