--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset=utf-8>
 
 <header>
-    <h1><span>L</span>a <span>C</span>ontrée</h1>
+    <h1>La <span>C</span>ontrée</h1>
     <p>Viens te ressourcer en affûtant tes outils avec nous</p>
 </header>
 <section class=intro>
