--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <p>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</p>
     </blockquote>
 
+</section>
+<section>
+
     <h3>Pourquoi La Contrée ?</h3>
 
     <p>Les membres de La Contrée présentent des profils divers et variés, mais partagent un certain nombre de constats autour de la formation classique :</p>
@@ -80,7 +83,6 @@
     <h3>Du coup, comment ça se passe pour les factures ?</h3>
 
     <p>L'administratif est un moyen, pas une fin. Pour la facture, on voit au cas par cas, en fonction de qui propose la formation.</p>
-</section>
 
 <section id=trainers>
     <h2>Les Humains</h2>
