Highlight website and 'speak with my voice'

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
+                <a href=https://oncletom.io><i class="fa fa-sitemap"></i></a>
                 <a href=https://github.com/oncletom><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/oncletom><i class="fa fa-twitter"></i></a>
-                <a href=https://oncletom.io><i class="fa fa-sitemap"></i></a>
                 <a href=mailto:&#104;&#105;&#64;&#111;&#110;&#99;&#108;&#101;&#116;&#111;&#109;&#46;&#105;&#111;><i class="fa fa-envelope-open"></i></a>
             </span>
         </article>
@@ -182,8 +182,8 @@
         <article>
             <h3>David Bruant<span class=baseline>A bridge between machines and people</span></h3>
             <img src=img/humains/david-b.jpg>
-            <p>Développeur web passionné et curieux. David contribue régulièrement à la partie JavaScript de la documentation MDN (Mozilla Developer Network) et donne des conférences pour rendre simples et accessibles au plus grand nombre les complexités des technologies web.</p>
-            <p>Il participe autant que possible aux processus de standardisations des technologies web sur les listes de diffusions où les décisions se prennent (WHATWG, es-discuss, etc.).</p>
+            <p>Développeur web passionné et curieux, je contribue régulièrement à la documentation MDN (Mozilla Developer Network) et donne des conférences pour rendre simples et accessibles au plus grand nombre les complexités des technologies web.</p>
+            <p>Je participe autant que possible aux processus de standardisations des technologies web sur les listes de diffusions où les décisions se prennent (WHATWG, es-discuss, etc.).</p>
             <span class=links>
                 <a href=http://github.com/davidbruant><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/DavidBruant><i class="fa fa-twitter"></i></a>
@@ -225,23 +225,23 @@
             <img src=img/humains/lilian-r.jpg>
             <p>Je suis un Consultant en stratégie Web et travail en reseau qui aide les organisation à travailler autrement grâce aux technologies sociales.</p>
             <span class=links>
+                <a href=http://www.lilianricaud.com/travail-en-reseau><i class="fa fa-sitemap"></i></a>
                 <a href=https://github.com/lilianricaud><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/lilious><i class="fa fa-twitter"></i></a>
                 <a href=mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#108;&#105;&#108;&#105;&#97;&#110;&#114;&#105;&#99;&#97;&#117;&#100;&#46;&#99;&#111;&#109;><i class="fa fa-envelope-open"></i></a>
-                <a href=http://www.lilianricaud.com/travail-en-reseau><i class="fa fa-sitemap"></i></a>
             </span>
         </article>
         <article>
             <h3>Julia Barbelane<span class=baseline>Vidéaste et réalisatrice de vidéos pour le web</span></h3>
             <img src=img/humains/julia-b.jpg>
-            <p>Je m'appelle Julia et je suis vidéaste et réalisatrice pour les entrepreneurs du changement.</p>
+            <p>Je suis vidéaste et réalisatrice pour les entrepreneurs du changement.</p>
             <p>J'ai choisi d'entreprendre et créer pour vivre avec enthousiasme et liberté.</p>
             <p>J'aspire à travailler avec et pour celles et ceux qui recherchent plus d'alignement avec leur valeurs dans l'idée explorer de nouvelles pistes ensemble.</p>
             <span class=links>
+                <a href=http://www.juliabarbelane.com><i class="fa fa-sitemap"></i></a>
                 <a href=https://github.com/julia-barbelane><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/juliabarbelane><i class="fa fa-twitter"></i></a>
-                <a href=http://www.juliabarbelane.com><i class="fa fa-sitemap"></i></a>
-            </span>            
+            </span>
         </article>
         <article>
             <h3>Thomas Wolff<span class=baseline>La tête dans la tempête</span></h3>
@@ -266,10 +266,11 @@
         <article>
             <h3>Thibault Jouannic<span class=baseline>Mon nom est Thibault</span></h3>
             <img src=img/humains/thibault-j.jpg>
-            <p>Je suis Thibault Jouannic, ingénieur Web indépendant (en profession libérale). Je réalise des prestations de développement logiciel spécifiques sur le Web.</p>
+            <p>Je suis ingénieur Web indépendant (en profession libérale). Je réalise des prestations de développement logiciel spécifiques sur le Web.</p>
             <p>Je travaille avec des technologies ouvertes ayant fait leurs preuves pour produire des logiciels utiles, stables et durables.</p>
             <p>Je suis un fervent adepte des méthodologies agiles qui favorisent l'émergence de logiciels de qualité à travers une collaboration franche et ouverte. Par conséquent, je ne travaille pas au forfait.</p>
             <span class=links>
+                <a href=https://miximum.fr><i class="fa fa-sitemap"></i></a>
                 <a href=https://github.com/thibault><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/thibaultj><i class="fa fa-twitter"></i></a>
                 <a href=mailto:&#116;&#104;&#105;&#98;&#97;&#117;&#108;&#116;&#64;&#106;&#111;&#117;&#97;&#110;&#110;&#105;&#99;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a>
