--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <header>
     <h1>La <span>C</span>ontrée</h1>
-    <p>Viens te ressourcer en affûtant tes outils avec nous</p>
+    <!-- <p>Viens te ressourcer en affûtant tes outils avec nous</p> -->
 </header>
 <section class=intro>
 
