--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>La &nbsp;<span>C</span>ontrée</h1>
     <!-- <p>Viens te ressourcer en affûtant tes outils avec nous</p> -->
 </header>
-<section class=intro>
 
+<section>
     <h2>Qu'est-ce que c'est ?</h2>
 
     <p>La Contrée est un regroupement de professionnel·le·s du numérique qui proposent un catalogue de formations utiles et conviviales.</p>
@@ -21,7 +21,6 @@
 
         <p>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</p>
     </blockquote>
-
 </section>
 <section>
 
