--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
 
         <p>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</p>
     </blockquote>
-</section>
-<section>
 
-    <h3>Pourquoi La Contrée ?</h3>
+    <h2>Pourquoi La Contrée ?</h2>
 
     <p>Les membres de La Contrée présentent des profils divers et variés, mais partagent un certain nombre de constats autour de la formation classique :</p>
 
@@ -45,7 +43,7 @@
         <li>avec l'impression d'avoir passé un bon moment ;</li>
     </ul>
 
-    <h3>Concrètement, ça veut dire quoi ?</h3>
+    <h2>Concrètement, ça veut dire quoi ?</h2>
 
     <p>Dans la mesure ou nous privilégions le sur-mesure et l'adaptabilité, chaque formation se déroule potentiellement de manière unique. Toutefois, voici quelques principes généraux pour se faire une idée du déroulement d'une formation.</p>
 
@@ -59,29 +57,37 @@
 
     <p>Les formations accueillent entre x et y personnes, pour construire un cadre dynamique, vivant et qui reste convivial.</p>
 
-    <h3>Je peux voir la liste de vos formations ?</h3>
+    <dl>
+        <dt>Je peux voir la liste de vos formations ?</dt>
+        <dd>Oui, c'est par <a href=#trainings>là</a>.</dd>
+    </dl>
 
-    <p>Oui, c'est par <a href=#trainings>là</a>.</p>
+    <dl>
+        <dt>Et ça coûte cher ?</dt>
+        <dd>Oui. Mais on boira avec toi pour t'aider à oublier.</dd>
+    </dl>
 
-    <h3>Et ça coûte cher ?</h3>
+    <dl>
+        <dt>Qui sont les membres de La Contrée ?</dt>
+        <dd>Nos profils par <a href=#trainers>là</a>.</dd>
+    </dl>
 
-    <p>Oui. Mais on boira avec toi pour t'aider à oublier.</p>
+    <dl>
+        <dt>Où se trouve La Contrée ?</dt>
+        <dd>Les membres de La Contrée sont répartis sur toute la France, voire vadrouillent aux quatre coins du globe. Mais nous sommes mobiles, tant qu'il y a une gare pas trop loin, on se débrouille.</dd>
+    </dl>
 
-    <h3>Qui sont les membres de La Contrée ?</h3>
+    <dl>
+        <dt>Du coup, vous êtes un organisme de formation, c'est ça ?</dt>
+        <dd>Il n'y a pas de structure administrative derrière La Contrée. Nous sommes toutes et tous déjà indépendant·e·s, salarié·e·s de scops, etc. et disposons pour la plupart de notre propre statut et / ou structure.</dd>
+    </dl>
 
-    <p>Nos profils par <a href=#trainers>là</a>.</p>
+    <dl>
+        <dt>Du coup, comment ça se passe pour les factures ?</dt>
+        <dd>L'administratif est un moyen, pas une fin. Pour la facture, on voit au cas par cas, en fonction de qui propose la formation.</dd>
+    </dl>
 
-    <h3> Où se trouve La Contrée ?</h3>
-
-    <p>Les membres de La Contrée sont répartis sur toute la France, voire vadrouillent aux quatre coins du globe. Mais nous sommes mobiles, tant qu'il y a une gare pas trop loin, on se débrouille.</p>
-
-    <h3>Du coup, vous êtes un organisme de formation, c'est ça ?</h3>
-
-    <p>Il n'y a pas de structure administrative derrière La Contrée. Nous sommes toutes et tous déjà indépendant·e·s, salarié·e·s de scops, etc. et disposons pour la plupart de notre propre statut et / ou structure.</p>
-
-    <h3>Du coup, comment ça se passe pour les factures ?</h3>
-
-    <p>L'administratif est un moyen, pas une fin. Pour la facture, on voit au cas par cas, en fonction de qui propose la formation.</p>
+</section>
 
 <section id=trainers>
     <h2>Les Humains</h2>
@@ -117,7 +123,7 @@
                 <a href=https://twitter.com/perafoo><i class="fa fa-twitter"></i></a>
                 <a href=mailto:&#114;&#97;&#112;&#104;&#97;&#101;&#108;&#64;&#117;&#116;&#55;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a>
             </span>
-       </article>
+        </article>
         <article>
             <h3>Antoine Vernois<span class=baseline>Faites des trucs</span></h3>
             <img src=img/humains/antoine-v.jpg>
