--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <p>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</p>
     </blockquote>
-
+</section>
+<section>
     <h2>Pourquoi La Contrée ?</h2>
 
     <p>Les membres de La Contrée présentent des profils divers et variés, mais partagent un certain nombre de constats autour de la formation classique :</p>
@@ -42,7 +43,8 @@
         <li>avec les contacts à solliciter en cas de besoin ;</li>
         <li>avec l'impression d'avoir passé un bon moment ;</li>
     </ul>
-
+</section>
+<section>
     <h2>Concrètement, ça veut dire quoi ?</h2>
 
     <p>Dans la mesure ou nous privilégions le sur-mesure et l'adaptabilité, chaque formation se déroule potentiellement de manière unique. Toutefois, voici quelques principes généraux pour se faire une idée du déroulement d'une formation.</p>
