--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <dl>
         <dt>Je peux voir la liste de vos formations ?</dt>
-        <dd>Oui, c'est par <a href=#trainings>là</a>.</dd>
+        <dd>Oui, c'est <a href=#trainings>par là</a>.</dd>
     </dl>
 
     <dl>
@@ -71,7 +71,7 @@
 
     <dl>
         <dt>Qui sont les membres de La Contrée ?</dt>
-        <dd>Nos profils par <a href=#trainers>là</a>.</dd>
+        <dd>Nos profils <a href=#trainers>par là</a>.</dd>
     </dl>
 
     <dl>
