Validation avec doctype

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!doctype html>
 <link rel=stylesheet href=vendor/font-awesome-4.7.0/css/font-awesome.min.css>
-<link rel="stylesheet" href="https://overpass-30e2.kxcdn.com/overpass.css">
-<link rel=stylesheet href=grillade.css>
+<link rel=stylesheet href=vendor/overpass.css>
+<link rel=stylesheet href=vendor/grillade.css>
 <link rel=stylesheet href=style.css>
 <meta charset=utf-8>
+<title>La contrée : Viens te ressourcer en affûtant tes outils avec nous.</title>
 
 <header>
     <h1>La &nbsp;<span>C</span>ontrée</h1>
