Rédac initiale de la page pour Darktable.
J'ai mis un titre très long exprès pour embêter @newick et @maiwann.

--- a/index.html
+++ b/index.html
@@ -324,11 +324,12 @@
             <!-- <a href=#>En savoir plus</a> -->
         </article>
         <article>
-            <h3>Darktable<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Darktable<span class=baseline>Développement photo raw libre</span></h3>
             <img src=img/ressources/bleu-des-causses.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <!-- <a href=#>En savoir plus</a> -->
+            <p>En photographie, la prise de vue n'est que la première étape.</p>
+            <p>Vient ensuite la phase de développement pour passer du fichier raw au jpeg final.</p>
+            <p>Venez découvrir Darktable, l'équivalent (mais mieux et libre) de Lightroom en vous initiant (ou perfectionnant) au développement photographique numérique.</p>
+            <a href=contents/darktable.html>En savoir plus</a>
         </article>
         <article>
             <h3>Running Lean<span class=baseline>La machine à passer à l'acte</span></h3>
