--- a/index.html
+++ b/index.html
@@ -275,11 +275,12 @@
             </span>
         </article>
         <article>
-            <h3>Thibault Jouannic<span class=baseline>Mon nom est Thibault</span></h3>
+            <h3>Thibault Jouannic<span class=baseline>Ingénieur Web Freelance</span></h3>
             <img src=img/humains/thibault-j.jpg>
-            <p>Je suis ingénieur Web indépendant (en profession libérale). Je réalise des prestations de développement logiciel spécifiques sur le Web.</p>
-            <p>Je travaille avec des technologies ouvertes ayant fait leurs preuves pour produire des logiciels utiles, stables et durables.</p>
-            <p>Je suis un fervent adepte des méthodologies agiles qui favorisent l'émergence de logiciels de qualité à travers une collaboration franche et ouverte. Par conséquent, je ne travaille pas au forfait.</p>
+            <p>Indépendant, je propose des prestations agiles de développement d'applications Web sur mesure.</p>
+            <p>Ancien ingénieur <acronym title="Tierce Maintenance Applicative">TMA</acronym>, j'ai une aversion pour le code sale et les projets sans tests.</p>
+            <p>Quand c'est possible, je préfère travailler sur des projets socialement utiles et au minimum, qui ne nuisent pas à mon prochain.</p>
+            <p>Accessoirement, je deviens insupportable en périodes électorales.</p>
             <span class=links>
                 <a href=https://miximum.fr><i class="fa fa-sitemap"></i></a>
                 <a href=https://github.com/thibault><i class="fa fa-github-alt"></i></a>
