--- a/contents/running_lean.html
+++ b/contents/running_lean.html
@@ -36,4 +36,6 @@
 
     <a href="https://medium.com/@julia.barbelane/walking-dev-ou-comment-apprendre-en-itin%C3%A9rance-426acb12e024">https://medium.com/@julia.barbelane/walking-dev-ou-comment-apprendre-en-itin%C3%A9rance-426acb12e024</a>
 
+
+    <a href="/#trainings" class="btn">Retourner aux formations</a>
 </article>
