Ajoute la section « prérequis » dans darktable

--- a/contents/darktable.html
+++ b/contents/darktable.html
@@ -46,6 +46,11 @@
     personnalisé, mais dans tous les cas, un jeu de fichiers permettant
     d'étudier différentes problématiques sera fourni.</p>
 
+    <h2>Prérequis</h2>
+
+    <p>Être capable de faire fonctionner un appareil photo. Savoir allumer un
+    ordinateur et être capable de distinguer sa souris de son grille-pain.</p>
+
     <h2>Pourquoi cet atelier est-il génial ?</h2>
 
     <p>Métier, simple hobby ou véritable passion, la photographie est une
