Affichage pseudo-alétoire des portraits

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="grid-3 has-gutter">
         <article>
             <h3>Antoine César<span class=baseline>Software Troublemaker</span></h3>
-            <img src=img/humains/antoine-c.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -108,7 +108,7 @@
         </article>
         <article>
             <h3>Pascal Romain<span class=baseline>Ingénieur documentaire transfuge agent triple-store</span></h3>
-            <img src=img/humains/pascal-r.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -118,7 +118,7 @@
         </article>
         <article>
             <h3>Raphaël Pierquin<span class=baseline>La tête dans la tempête</span></h3>
-            <img src=img/humains/raphael-p.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -128,8 +128,18 @@
             </span>
         </article>
         <article>
+            <h3>Emmanuel Gaillot<span class=baseline>Faites des trucs</span></h3>
+            <img src=img/humains/blur.jpg>
+            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links>
+                <a href=https://github.com/egaillot><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/egaillot><i class="fa fa-twitter"></i></a>
+            </span>
+        </article>
+        <article>
             <h3>Antoine Vernois<span class=baseline>Faites des trucs</span></h3>
-            <img src=img/humains/antoine-v.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -139,7 +149,7 @@
         </article>
         <article>
             <h3>Laurent Marseault<span class=baseline>Secoueur de cocotiers</span></h3>
-            <img src=img/humains/laurent-m.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -149,8 +159,19 @@
             </span>
         </article>
         <article>
+                <h3>Emmanuel Gaillot<span class=baseline>Faites des trucs</span></h3>
+                <img src=img/humains/blur.jpg>
+                <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+                <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+                <span class=links>
+                    <a href=https://elsif.fr><i class="fa fa-sitemap"></i></a>
+                    <a href=https://github.com/yaf><i class="fa fa-github-alt"></i></a>
+                    <a href=https://twitter.com/ya_f><i class="fa fa-twitter"></i></a>
+                </span>
+        </article>
+        <article>
             <h3>Claude Aubry<span class=baseline>L'happy permaculteur</span></h3>
-            <img src=img/humains/claude-a.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -160,7 +181,7 @@
         </article>
         <article>
             <h3>Thomas Parisot<span class=baseline>Software designer</span></h3>
-            <img src=img/humains/thomas-p.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -172,7 +193,7 @@
         </article>
         <article>
             <h3>Erick Gardin<span class=baseline>Bâtisseur d'interfaces web</span></h3>
-            <img src=img/humains/erick-g.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -182,7 +203,7 @@
         </article>
         <article>
             <h3>Maïtané Lenoir<span class=baseline>Amoureuse et passionnée du Webdesign</span></h3>
-            <img src=img/humains/maitane-l.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -192,7 +213,7 @@
         </article>
         <article>
             <h3>David Bruant<span class=baseline>A bridge between machines and people</span></h3>
-            <img src=img/humains/david-b.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Développeur web passionné et curieux, je contribue régulièrement à la documentation MDN (Mozilla Developer Network) et donne des conférences pour rendre simples et accessibles au plus grand nombre les complexités des technologies web.</p>
             <p>Je participe autant que possible aux processus de standardisations des technologies web sur les listes de diffusions où les décisions se prennent (WHATWG, es-discuss, etc.).</p>
             <span class=links>
@@ -203,7 +224,7 @@
         </article>
         <article>
             <h3>Juliette Palumbo<span class=baseline>La tête dans la tempête</span></h3>
-            <img src=img/humains/juliette-p.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -213,7 +234,7 @@
         </article>
         <article>
             <h3>Stéphane Langlois<span class=baseline>Chercheur de pépites collaboratives</span></h3>
-            <img src=img/humains/stephane-l.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Je crois qu'en partageant nos singularités, nous construisons une communauté saine. Et je crois que de cette communauté saine va émerger une génération d’acteur.rice.s engagé.e.s, libéré.e.s du contrôle, et des jeux de domination ineptes.</p>
             <p>J'expérimente dans les domaines des collectifs, de la facilitation de groupe, du changement organisationnel et des conseils individuels pour nourrir ma quête d'une citoyenneté enthousiaste et apprenante.</p>
             <span class=links>
@@ -224,7 +245,7 @@
         </article>
         <article>
             <h3>Alyssa Daoud<span class=baseline>La tête dans la tempête</span></h3>
-            <img src=img/humains/alyssa-d.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -233,7 +254,7 @@
         </article>
         <article>
             <h3>Lilian Ricaud<span class=baseline>Chercheur écosystémique de la coopération</span></h3>
-            <img src=img/humains/lilian-r.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Je suis un Consultant en stratégie Web et travail en reseau qui aide les organisation à travailler autrement grâce aux technologies sociales.</p>
             <span class=links>
                 <a href=http://www.lilianricaud.com/travail-en-reseau><i class="fa fa-sitemap"></i></a>
@@ -244,7 +265,7 @@
         </article>
         <article>
             <h3>Julia Barbelane<span class=baseline>Vidéaste et réalisatrice de vidéos pour le web</span></h3>
-            <img src=img/humains/julia-b.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Je suis vidéaste et réalisatrice pour les entrepreneurs du changement.</p>
             <p>J'ai choisi d'entreprendre et créer pour vivre avec enthousiasme et liberté.</p>
             <p>J'aspire à travailler avec et pour celles et ceux qui recherchent plus d'alignement avec leur valeurs dans l'idée explorer de nouvelles pistes ensemble.</p>
@@ -256,7 +277,7 @@
         </article>
         <article>
             <h3>Thomas Wolff<span class=baseline>La tête dans la tempête</span></h3>
-            <img src=img/humains/thomas-w.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -266,7 +287,7 @@
         </article>
         <article>
             <h3>Sabine Safi<span class=baseline>La tête dans la tempête</span></h3>
-            <img src=img/humains/sabine-s.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -276,7 +297,7 @@
         </article>
         <article>
             <h3>Thibault Jouannic<span class=baseline>Ingénieur Web Freelance</span></h3>
-            <img src=img/humains/thibault-j.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Indépendant, je propose des prestations agiles de développement d'applications Web sur mesure.</p>
             <p>Ancien ingénieur <acronym title="Tierce Maintenance Applicative">TMA</acronym>, j'ai une aversion pour le code sale et les projets sans tests.</p>
             <p>Quand c'est possible, je préfère travailler sur des projets socialement utiles et au minimum, qui ne nuisent pas à mon prochain.</p>
@@ -290,7 +311,7 @@
         </article>
         <article>
             <h3>Fabien Trégan<span class=baseline>La tête dans la tempête</span></h3>
-            <img src=img/humains/fabien-t.jpg>
+            <img src=img/humains/blur.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links>
@@ -433,3 +454,15 @@
 <footer>
     <p>Bordeaux - Toulouse - Paris - Lille - Montpellier - Marseille - Lyon - Nantes - Strasbourg</p>
 </footer>
+
+<script>
+    // Create an array with 0 to n values and shuffle
+    const serie = Array.apply(null, {length: 21})
+        .map(Number.call, Number)
+        .sort(() => 0.5 - Math.random())
+    const portraits = document.querySelectorAll('section#trainers img')
+console.log(serie)
+    Array.from(portraits).map(img => {
+        img.src = `img/humains/${serie.pop()+1}.jpg`
+    })
+</script>
