--- a/index.html
+++ b/index.html
@@ -95,10 +95,9 @@
     <h2>Les Humains</h2>
     <div class="grid-3 has-gutter">
         <article>
-            <h3>Antoine César<span class=baseline>Software Troublemaker</span></h3>
+            <h3>Antoine Cézar<span class=baseline>Software Troublemaker</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Software Troublemaker qui pense comme George Carlin qu'il est important d'en avoir rien à carrer</p>
             <span class=links>
                 <a href=https://github.com/AntoineCezar><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/AntoineCezar><i class="fa fa-twitter"></i></a>
