--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <article>
             <h3>Antoine Cézar<span class=baseline>Software Troublemaker</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Software Troublemaker qui pense comme George Carlin qu'il est important d'en avoir rien à carrer</p>
+            <p>Software Troublemaker, je pense comme George Carlin qu'il est important d'en avoir rien à carrer</p>
             <span class=links>
                 <a href=https://github.com/AntoineCezar><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/AntoineCezar><i class="fa fa-twitter"></i></a>
