--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
         <article>
             <h3>Erick Gardin<span class=baseline>Bâtisseur d'interfaces web</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Je suis intégrateur Web, c'est à dire que je fais parti de ces quelques personnes qui apprécient le HTML et le CSS pour créer des expériences de navigation agréables et attrayantes.</p>
+<p>Ce que je préfère c’est travailler sur des projets intéressants avec des gens avec qui je suis aligné.</p>
             <span class=links>
                 <a href=https://github.com/newick><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/newick><i class="fa fa-twitter"></i></a>
