--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <article>
             <h3>Antoine Cézar<span class=baseline>Software Troublemaker</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Software Troublemaker, je pense comme George Carlin qu'il est important d'en avoir rien à carrer</p>
+            <p>Software Troublemaker, je pense comme George Carlin qu'il est important d'en avoir rien à carrer.</p>
             <span class=links>
                 <a href=https://github.com/AntoineCezar><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/AntoineCezar><i class="fa fa-twitter"></i></a>
@@ -157,15 +157,15 @@
             </span>
         </article>
         <article>
-                <h3>Yannick François<span class=baseline>Faites des trucs</span></h3>
-                <img src=img/humains/blur.jpg>
-                <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-                <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-                <span class=links>
-                    <a href=https://elsif.fr><i class="fa fa-sitemap"></i></a>
-                    <a href=https://github.com/yaf><i class="fa fa-github-alt"></i></a>
-                    <a href=https://twitter.com/ya_f><i class="fa fa-twitter"></i></a>
-                </span>
+            <h3>Yannick François<span class=baseline>Faites des trucs</span></h3>
+            <img src=img/humains/blur.jpg>
+            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links>
+                <a href=https://elsif.fr><i class="fa fa-sitemap"></i></a>
+                <a href=https://github.com/yaf><i class="fa fa-github-alt"></i></a>
+                <a href=https://twitter.com/ya_f><i class="fa fa-twitter"></i></a>
+            </span>
         </article>
         <article>
             <h3>Claude Aubry<span class=baseline>L'happy permaculteur</span></h3>
@@ -202,8 +202,7 @@
         <article>
             <h3>Maïtané Lenoir<span class=baseline>Amoureuse et passionnée du Webdesign</span></h3>
             <img src=img/humains/blur.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p><em>Amoureuse du web et du numérique,</em> j’aime <em>affiner et améliorer les idées</em> pour les rendre accessibles à chacun. <em>Agile et curieuse,</em> j’utilise toute une palette de compétences hétérogènes pour réaliser des sites responsive ou des applications métiers, sur très grands ou tout petits supports.</p>
             <span class=links>
                 <a href=https://github.com/maiwann><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/maiwann_><i class="fa fa-twitter"></i></a>
